fix for pivotal bugs 53578319 and 53278875
https://www.pivotaltracker.com/story/show/53578319 Cannot edit assay context card titles
https://www.pivotaltracker.com/story/show/53278875 Edit Context Card- The Tick Mark button is not working when clicked after when the card name was edited.

Ended up removing an unneeded div the was causing some oddness and covering the button to submit the inline edit for the card title.  Now the button should no longer be covered and is clickable.

--- a/BARD/web-app/css/bootstrap-plus.css
+++ b/BARD/web-app/css/bootstrap-plus.css
@@ -59,13 +59,6 @@
  	vertical-align:middle;
 }
 
-.cardMenu {
-	float:left;
- 	width:20%;
- 	text-align:right;
- 	vertical-align:middle;
-}
-
 /* Used to prevent a form from changing the layout around the form */
 form.no-padding {
     margin-bottom: 0px;
